# kr_3_potemkin_da

./: README.md  main.py  pyproject.toml  settings.py
app/src/: utils.py
tests/: conftest.py  test_utils.py
